// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Schema Parser Double value Enum 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "TypeDefinition",
      "loc": Object {
        "end": 27,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 10,
          "start": 5,
        },
        "value": "Hello",
      },
      "variants": Array [
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": Array [],
          "isTypeVariantNode": false,
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 18,
            "start": 13,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 15,
              "start": 13,
            },
            "value": "WO",
          },
        },
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": Array [],
          "isTypeVariantNode": false,
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 27,
            "start": 21,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 24,
              "start": 21,
            },
            "value": "RLD",
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 27,
    "start": 0,
  },
}
`;

exports[`Schema Parser Scalar 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "TypeDefinition",
      "loc": Object {
        "end": 19,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 10,
          "start": 5,
        },
        "value": "Hello",
      },
      "variants": Array [
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": undefined,
          "isTypeVariantNode": false,
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 19,
            "start": 13,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 19,
              "start": 13,
            },
            "value": "String",
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 19,
    "start": 0,
  },
}
`;

exports[`Schema Parser Simple data 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "TypeDefinition",
      "loc": Object {
        "end": 32,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 10,
          "start": 5,
        },
        "value": "Hello",
      },
      "variants": Array [
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": Array [
            Object {
              "description": undefined,
              "directives": Array [],
              "kind": "FieldDefinition",
              "loc": Object {
                "end": 30,
                "start": 17,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 22,
                  "start": 17,
                },
                "value": "world",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 30,
                  "start": 24,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 30,
                    "start": 24,
                  },
                  "value": "String",
                },
              },
            },
          ],
          "isTypeVariantNode": true,
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 32,
            "start": 13,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 10,
              "start": 5,
            },
            "value": "Hello",
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 32,
    "start": 0,
  },
}
`;

exports[`Schema Parser Simple data object 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "TypeDefinition",
      "loc": Object {
        "end": 45,
        "start": 5,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 15,
          "start": 10,
        },
        "value": "Hello",
      },
      "variants": Array [
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": Array [
            Object {
              "description": undefined,
              "directives": Array [],
              "kind": "FieldDefinition",
              "loc": Object {
                "end": 39,
                "start": 26,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 31,
                  "start": 26,
                },
                "value": "world",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 39,
                  "start": 33,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 39,
                    "start": 33,
                  },
                  "value": "String",
                },
              },
            },
          ],
          "isTypeVariantNode": true,
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 45,
            "start": 18,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 15,
              "start": 10,
            },
            "value": "Hello",
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 45,
    "start": 0,
  },
}
`;

exports[`Schema Parser Simple non-null resolver 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "TypeDefinition",
      "loc": Object {
        "end": 32,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 10,
          "start": 5,
        },
        "value": "Hello",
      },
      "variants": Array [
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": Array [
            Object {
              "description": undefined,
              "directives": Array [],
              "kind": "FieldDefinition",
              "loc": Object {
                "end": 30,
                "start": 17,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 22,
                  "start": 17,
                },
                "value": "world",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 30,
                  "start": 24,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 30,
                    "start": 24,
                  },
                  "value": "String",
                },
              },
            },
          ],
          "isTypeVariantNode": true,
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 32,
            "start": 13,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 10,
              "start": 5,
            },
            "value": "Hello",
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 32,
    "start": 0,
  },
}
`;

exports[`Schema Parser Simple resolver 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "TypeDefinition",
      "loc": Object {
        "end": 18,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 10,
          "start": 5,
        },
        "value": "Hello",
      },
      "variants": Array [
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": undefined,
          "isTypeVariantNode": false,
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 18,
            "start": 13,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 18,
              "start": 13,
            },
            "value": "World",
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 18,
    "start": 0,
  },
}
`;

exports[`Schema Parser Single value Enum 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "TypeDefinition",
      "loc": Object {
        "end": 21,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 10,
          "start": 5,
        },
        "value": "Hello",
      },
      "variants": Array [
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": Array [],
          "isTypeVariantNode": false,
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 21,
            "start": 13,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 18,
              "start": 13,
            },
            "value": "WORLD",
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 21,
    "start": 0,
  },
}
`;

exports[`Schema Parser Union fails with double pipe 1`] = `
Object {
  "locations": Array [
    Object {
      "column": 18,
      "line": 1,
    },
  ],
  "message": "Syntax Error: Expected Name, found \\"|\\".",
}
`;

exports[`Schema Parser Union fails with leading pipe 1`] = `
Object {
  "locations": Array [
    Object {
      "column": 14,
      "line": 1,
    },
  ],
  "message": "Syntax Error: Expected Variant, found \\"|\\".",
}
`;

exports[`Schema Parser Union fails with no resolvers 1`] = `
Object {
  "locations": Array [
    Object {
      "column": 15,
      "line": 1,
    },
  ],
  "message": "Syntax Error: Expected Variant, found <EOF>.",
}
`;

exports[`Schema Parser Union fails with trailing pipe 1`] = `
Object {
  "locations": Array [
    Object {
      "column": 24,
      "line": 1,
    },
  ],
  "message": "Syntax Error: Expected Name, found <EOF>.",
}
`;

exports[`Schema Parser Union with two resolvers 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "kind": "TypeDefinition",
      "loc": Object {
        "end": 21,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 10,
          "start": 5,
        },
        "value": "Hello",
      },
      "variants": Array [
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": undefined,
          "isTypeVariantNode": false,
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 15,
            "start": 13,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 15,
              "start": 13,
            },
            "value": "Wo",
          },
        },
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": undefined,
          "isTypeVariantNode": false,
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 21,
            "start": 18,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 18,
            },
            "value": "Rld",
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 21,
    "start": 0,
  },
}
`;

exports[`Schema Parser parses data with description multi-line string 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": Object {
        "block": true,
        "kind": "StringValue",
        "loc": Object {
          "end": 19,
          "start": 0,
        },
        "value": "Description",
      },
      "directives": Array [],
      "kind": "TypeDefinition",
      "loc": Object {
        "end": 86,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 64,
          "start": 59,
        },
        "value": "Hello",
      },
      "variants": Array [
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": Array [
            Object {
              "description": undefined,
              "directives": Array [],
              "kind": "FieldDefinition",
              "loc": Object {
                "end": 84,
                "start": 71,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 76,
                  "start": 71,
                },
                "value": "world",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 84,
                  "start": 78,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 84,
                    "start": 78,
                  },
                  "value": "String",
                },
              },
            },
          ],
          "isTypeVariantNode": true,
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 86,
            "start": 67,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 64,
              "start": 59,
            },
            "value": "Hello",
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 86,
    "start": 0,
  },
}
`;

exports[`Schema Parser parses data with description string 1`] = `
Object {
  "definitions": Array [
    Object {
      "description": Object {
        "block": false,
        "kind": "StringValue",
        "loc": Object {
          "end": 13,
          "start": 0,
        },
        "value": "Description",
      },
      "directives": Array [],
      "kind": "TypeDefinition",
      "loc": Object {
        "end": 46,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 24,
          "start": 19,
        },
        "value": "Hello",
      },
      "variants": Array [
        Object {
          "description": undefined,
          "directives": Array [],
          "fields": Array [
            Object {
              "description": undefined,
              "directives": Array [],
              "kind": "FieldDefinition",
              "loc": Object {
                "end": 44,
                "start": 31,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 36,
                  "start": 31,
                },
                "value": "world",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 44,
                  "start": 38,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 44,
                    "start": 38,
                  },
                  "value": "String",
                },
              },
            },
          ],
          "isTypeVariantNode": true,
          "kind": "VariantDefinition",
          "loc": Object {
            "end": 46,
            "start": 27,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 24,
              "start": 19,
            },
            "value": "Hello",
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 46,
    "start": 0,
  },
}
`;

exports[`Schema Parser reject reserved names rejects an Enum type with incorrectly named values 1`] = `
Object {
  "locations": Array [
    Object {
      "column": 23,
      "line": 3,
    },
  ],
  "message": "Syntax Error: Name \\"__badName\\" must not begin with \\"__\\", which is reserved by GraphQL introspection.",
}
`;

exports[`Schema Parser reject reserved names rejects an Object type with incorrectly named fields 1`] = `
Object {
  "locations": Array [
    Object {
      "column": 20,
      "line": 3,
    },
  ],
  "message": "Syntax Error: Name \\"__badName\\" must not begin with \\"__\\", which is reserved by GraphQL introspection.",
}
`;
